tests/purs/failing/ViaInstanceNonCoercibleViaType.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ViaInstanceNonCoercibleViaType.purs:12:1 - 12:32 (line 12, column 1 - line 12, column 32)

  No type class instance was found for
  [33m                         [0m
  [33m  Prim.Coerce.Coercible D[0m
  [33m                        V[0m
  [33m                         [0m

in type class instance
[33m          [0m
[33m  Main.C D[0m
[33m          [0m

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

